# plantilla-raylib

./: .gitignore  CMakeLists.txt  README.md  index.html  main.cpp  raylibTemplate.data  raylibTemplate.html  raylibTemplate.js  raylibTemplate.js.orig.js  raylibTemplate.wasm  raylibTemplate.wast
.github/workflows/: buildDeployGHPages.yml
clases/: Mapa.cpp  Mapa.h  Nave.cpp  Nave.h
cmake/: raylib.cmake  raylib_web.cmake  raylib_web_post.cmake
resources/: shell.html
resources/mapa/: mapa.json  tileset.tsx
